# MU

./: .cursorrules  .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Gemini API enables Retrieval Augmented Generation.md  MCP_SETUP_GUIDE.md  MU-Audit-Prompt.md  README.md  architecture.md  bug_reports.json  bug_reports_archive.json  debug-regex.js  debug_log.txt  debug_page.txt  decisions.md  docker-compose.yml  gaps.md  git_history.md  git_viz.rs  handoff.md  inspect_gsoc.js  install_mcp_servers.ps1  new_models.txt  next.config.ts  package-lock.json  package.json  playwright.config.ts  postgrestools.jsonc  prisma.config.js  prisma.config.ts  status.md  synthetic_drilling_logs.csv  tsconfig.json  vitest.config.ts
.agent/: instructions.md
811_module/: 811_prd.txt
AUDIT-NOTES/: 00-executive-summary.md  01-understanding.md  02-code-quality.md  03-testing-plan.md  04-ux-improvements.md  05-roadmap.md  CHANGELOG.md  SECURITY-AUDIT-REPORT.md  report.txt
_archive/: QUICKSTART.md  The Hierarchy of Rules.md  bug_reports.json  gsoc_dump.html  handoff.md  implementation_plan.md  task.md  test_output.txt  tsc_errors.txt  walkthrough.md  white_line_audit.md
docs/: 216D-Compliance.md  216D-Field-Guide.md  216D-Midwest-Underground-Messaging.md  AGENT_PROTOCOLS.md  BRAND_STANDARDS.md  MCP_SETUP_GUIDE.md  decisions.md  (+9 more)
engine/: Cargo.toml
engine/src/: hdd_physics.rs  lib.rs  main.rs  witsml_parser.rs
src/lib/drilling/core-rs/: Cargo.toml
src/lib/drilling/core-rs/examples/: verify_math.rs
src/lib/drilling/core-rs/src/: lib.rs  mcm.rs
src/lib/drilling/core-rs/src/physics/: hydraulics.rs  torque_drag.rs
subterra/: Cargo.toml
subterra/src/: lib.rs  telemetry.rs  voxel.rs
(+480 files in other folders)
