[package]
name = "subterra"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["webgl2", "x11", "tonemapping_luts", "default_font"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { version = "=1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
noise = "0.9" # For Perlin noise

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
