[package]
name = "core-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
nalgebra = "0.32"
parry3d = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libm = "0.2"
argmin = "0.10"
getrandom = { version = "0.2", features = ["js"] }
